--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.4.9",
+    "@choc-ui/chakra-autocomplete": "^5.1.4",
     "@contentful/rich-text-react-renderer": "^15.16.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
