landing and best plans updates

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.6",
+    "@nikolovlazar/chakra-ui-prose": "^1.2.1",
     "contentful": "^9.3.0",
+    "dayjs": "^1.11.7",
     "eslint": "^8.0.0",
     "eslint-config-next": "13.1.6",
     "eslint-config-wesbos": "3.2.3",
