--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-card-carousel": "^1.1.3",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "prettier": "^2.7.1",
